--- a/Overlay - Giveaway/Overlays/AnkhBot/styles.css
+++ b/Overlay - Giveaway/Overlays/AnkhBot/styles.css
@@ -3,10 +3,6 @@
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box;         /* Opera/IE 8+ */
 }
-
-/** IMPORTS **/
-@import url('https://fonts.googleapis.com/css?family=Marcellus+SC');
-
 body {
   opacity: 1;
 }
@@ -19,38 +15,36 @@ ul, li {
   float: left;
   min-width: 500px;
   max-width: 700px;
-  font-family: 'Marcellus SC';
+  
+  font-family: "Segoe UI", sans-serif;
   font-size: 12pt;
   color: #fff;
-  opacity: 1;
+  opacity: 0;
 }
 #header {
-  background-color: rgba(0,0,0,0.75);
+  background-color: #1e1e1e;
   border-radius: 3px;
+  
   padding: 10px;
   text-align: center;
 }
 h1 {
-  font-size: 18pt;
+  font-size: 16pt;
   color: #fff;
   margin: 0;
-  margin-bottom: 10px;
-  background-color: #6441A4;
-  margin-left: -10px;
-  margin-right: -10px;
 }
 #gaCmd, #gaPerm, #gaInfo, #gaTicketCost, #gaMaxTickets, #timer {
   display: inline;
   padding-right: 15px;
   text-transform: uppercase;
+  font-weight: normal;
   color: #fff;
-  font-size: 12pt;
-  font-weight: bold;
+  font-size: 10pt;
 }
 #stats span {
   font-size: 12pt;
-  font-weight: normal !important;
-  color: #fff;
+  font-weight: bold;
+  color: #e67e22;
 }
 #content {
   float: left;
@@ -62,7 +56,7 @@ h1 {
   float: left;
   width: 100%;
   border-radius: 3px;
-  background-color: rgba(0,0,0,0.75);
+  background-color: #1e1e1e;
   padding: 10px;
   opacity: 0;
 }
@@ -71,10 +65,11 @@ h1 {
   width: 48%;
   margin: .5% 1%;
   border-radius: 3px;
+  
   padding: 3px 10px;
   font-size: 12pt;
   color: #fff;
-  background-color: #6441A4;
+  background-color: #e67e22;
 }
 .entryName {
   float: left;
